top-menu diff --git a/views/layouts/main.php b/views/layouts/main.php index 4de0fb7..145f8fa 100644 --- a/views/layouts/main.php +++ b/views/layouts/main.php @@ -29,7 +29,7 @@ AppAsset::register($this);  </head>  <body>  <?php $this->beginBody() ?> -<div class="container-fluid"> +<div class="container-fluid head_menu">      <div class="row header">          <nav class="navbar navbar-expand-lg navbar-dark fixed-top ">              <div class="col-lg-2 col-md-11 col-sm-12 navbar-brand"> diff --git a/web/css/main.css b/web/css/main.css index 335c180..c26d911 100644 --- a/web/css/main.css +++ b/web/css/main.css @@ -50,6 +50,10 @@ a:hover      text-align: center;
 }
+.head_menu
+{
+    min-height: 74px;
+}
 .navbar-nav
 {
     display: block;
@@ -217,7 +221,7 @@ a:hover
 }
 .flexslider {

-    margin-top: 120px !important;
+    /*margin-top: 120px !important;*/
     background-color: #e9edef !important;
 }
 .flexslider blockquote
@@ -834,7 +838,7 @@ ul, il {
     }
     .flexslider
     {
-        margin-top: 220px !important;
+        /*margin-top: 220px !important;*/
     }
 }
 /*dsf*/

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -50,6 +50,10 @@ a:hover
     text-align: center;  
 
 }
+.head_menu
+{
+    min-height: 74px;
+}
 .navbar-nav
 {
     display: block;
@@ -217,7 +221,7 @@ a:hover
 }
 .flexslider {
 
-    margin-top: 120px !important;
+    /*margin-top: 120px !important;*/
     background-color: #e9edef !important;    
 }
 .flexslider blockquote
@@ -834,7 +838,7 @@ ul, il {
     }
     .flexslider
     {
-        margin-top: 220px !important;
+        /*margin-top: 220px !important;*/
     }
 }
 /*dsf*/
